...
                    nav.navigateToScreen(Route.OTHERS_PROFILE.replace("{uid}", item.user.uid))
                  }
                  .background(color = backgroundColor, shape = RoundedCornerShape(10.dp))) {
            Spacer(modifier = Modifier.width(8.dp))
            Image(
                painter = painter,
                contentDescription = "User Icon",
                contentScale = ContentScale.Crop,
                modifier = Modifier.size(55.dp).clip(CircleShape))
            Spacer(modifier = Modifier.width(16.dp))
            Column(modifier = Modifier.fillMaxWidth().padding(10.dp)) {
              Text(
                  text = "${item.user.firstName} ${item.user.lastName}",
...
                        organizer = item.event.creator,
                        loc = LatLng(item.event.location.latitude, item.event.location.longitude),
                        rating = item.event.ratings[currentUID] ?: 0)
                  }) {
            Image(
                painter = painter,
                contentDescription = "Event Icon",
                modifier =
                    Modifier.size(100.dp) // Make the image bigger
                        .padding(8.dp)
                        .clip(RoundedCornerShape(16.dp)),
                contentScale = ContentScale.Crop)
            Spacer(modifier = Modifier.width(16.dp))
...
